--- a/Cart/templates/checkout.html
+++ b/Cart/templates/checkout.html
@@ -84,7 +84,7 @@
                             <!-- Email -->
                             <div class="ws-checkout-first-row">
                                 <div class="col-no-p ws-checkout-input col-sm-6">                                 
-                                    <label>Email Adress <span> * </span></label><br>                          
+                                    <label>Email Address <span> * </span></label><br>                          
                                     <input type="email" placeholder="yourmail@gmail.com">                                
                                 </div>
                                                                             
@@ -100,9 +100,9 @@
                                 <input type="text" placeholder="United States">                                      
                             </div>    
 
-                            <!-- Adress -->
+                            <!-- Address -->
                             <div class="col-no-p ws-checkout-input col-sm-12">                                
-                                <label>Adress <span> * </span></label><br>                          
+                                <label>Address <span> * </span></label><br>                          
                                 <input type="text" placeholder="Street adresss">                                      
                             </div>  
 
@@ -142,7 +142,7 @@
                 <!-- Cart Total -->
                 <div class="col-sm-5">
                     <div class="ws-checkout-order">                        
-                        <h2>Your Oder</h2>      
+                        <h2>Your Order</h2>      
 
                         <!-- Order Table -->              
                         <table>
@@ -198,7 +198,7 @@
                             </tfoot>
                         </table>
 
-                        <!-- Payment Metod -->
+                        <!-- Payment Method -->
                         <div class="ws-shipping-payment">
                             <div class="radio">
                                 <label><input type="radio" name="optradio" checked >Paypal</label> 
