--- a/Cart/templates/empty_cart.html
+++ b/Cart/templates/empty_cart.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <!-- Page Parallax Header -->
-   <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="50%">       
+   <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="{% static 'Images/rosegarden.jpg'%}"   display="block" width="100%" height="50%">       
         <div class="ws-overlay">            
             <div class="ws-parallax-caption">                
                 <div class="ws-parallax-holder">
@@ -14,6 +14,11 @@
         </div>            
     </div>            
     <!-- End Page Parallax Header -->
-    <div>You have no items in your cart.</div>
-    <div><a href="{% url 'gallery' %}">Go shop</a></div>
+
+
+ <div class="ws-checkout-content clearfix">  
+    <div><h3>You have no items in your cart.<h3></div>
+    <div class="btn ws-small-btn-black"><a href="{% url 'gallery' %}"><h3>Go shop<h3></a></div>
+</div>
+
 {% endblock %}
