--- a/Cart/templates/shopping_cart.html
+++ b/Cart/templates/shopping_cart.html
@@ -75,39 +75,26 @@
 
     <hr>
 
-     {% comment %}<form role="form" method="post" id="payment-form" action="{% url 'cart' %}">
-        <div id="credit-card-errors" style="display:none">
-            <div class="alert-message block-message error" id="stripe-error-message"></div>
-        </div>
-
-        <legend>Pay Now!</legend>
-
-        {% csrf_token %}
-        {{ form | as_bootstrap }}
-        <div class="form-group">
-            <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
-        </div>
-    </form>{% endcomment %}
-
-
-{% comment %}<div id="payment-container">
-    <form role="form" method="post" id="payment-form" action="{% url 'cart' %}">
-        <fieldset>
-            <legend>Pay Now</legend>
+     {% comment %}
+    <div class="col-sm-5">
+        <div class="ws-checkout-order">     
+            <form role="form" method="post" id="payment-form" action="{% url 'cart' %}">
                 <div id="credit-card-errors" style="display:none">
                     <div class="alert-message block-message error" id="stripe-error-message"></div>
-                </div>      
+                </div>
+
+                <legend>Pay Now!</legend>
 
                 {% csrf_token %}
-                {{ form | as_bootstrap_horizontal }}
+                {{ form | as_bootstrap }}
                 <div class="form-group">
                     <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
-                     <button type="submit">Pay</button>
-            </div>
-        </fieldset>
-    </form>
-    </div>
-</div>{% endcomment %}
+                </div>
+            </form>
+        </div>
+    </div>{% endcomment %}
+
+
 
 
 {% endblock %}
