--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -82,6 +82,7 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
 	-ms-transition: .3s ease-in-out;
 	-webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
+	background-color: #C2A476
 }
 .btn.focus, .btn:focus, .btn:hover {
     color: #fff;
