--- a/templates/base.html
+++ b/templates/base.html
@@ -177,10 +177,11 @@
                 </a>
                 </div>-->
                 <div class="ws-logo ws-center">
-                    <a href="index.html">
-                        <img src="{% static 'assets/img/logo-white.png'%}" alt="Alternative Text" class="img-responsive">
-                    </a> 
-                   <!-- <h2>       Power <h2>-->
+                    <div class="logo-color"
+                        <a href="index.html">
+                            <h1> Mailo </h1> 
+                        </a> 
+                    </div>
                 </div>      
                        
             
