--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -377,6 +377,10 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
 	max-width: 200px;
 	margin: 0 auto;
 }
+
+.logo-color{
+	color:white
+}
 .ws-navbar{	
 	min-height: 36px;
 	margin: 0;
