--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,8 @@
         <script src="{% static 'assets/js/plugins/jquery-1.11.3.min.js'%}"></script> 
  
          <!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico'%}">
-
+        <!--<link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico'%}">
+-->
         <!-- CSS Styles -->
         <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css'%}">          
         <link rel="stylesheet" href="{% static 'assets/css/main.css'%}">  
